# controller_2025-2026

./: .gitignore
program/: CMakeLists.txt  Readme.md
program/src/: controller.c  inputs.c  main.c
program/src/headers/: controller.h  inputs.h
program/src/wifi/: dhcp_server.c  udp_server.c  wifi_operator.c
program/src/wifi/headers/: dhcp_server.h  udp_server.h  wifi_operator.h
